--- a/3_pancakeMaker/style.css
+++ b/3_pancakeMaker/style.css
@@ -91,8 +91,8 @@ header h1 {
 
 .price-banner {
   position: absolute;
-  top: 10%;
-  left: 75%;
+  top: 5%;
+  left: 90%;
   transform: translateX(-50%);
   background-color: #d17b49;
   color: white;
@@ -103,7 +103,7 @@ header h1 {
   justify-content: center;
   align-items: center;
   font-size: 20px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 4px 8px #333;
 }
 
 #totalPrice {
@@ -197,4 +197,37 @@ button:hover {
 #orderDelivery,
 #orderPrice {
   margin: 1rem 0;
+}
+
+@media (max-width:730px) {
+
+  .container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    border-radius: 5px;
+    flex-direction: column;
+    box-shadow: 0 0 0;
+  }
+
+  .image-container {
+    padding: 2rem;
+  }
+
+  .price-banner {
+    color: white;
+    border-radius: 50%;
+    width: 80px;
+    height: 80px;
+    font-size: 16px;
+  }
+}
+
+.modal {
+  border-radius: 0px;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
 }
