--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@ body {
     font-family: var(--font);
     font-size: 0.9rem;
     background: var(--dark-blue);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 a {
@@ -36,6 +40,7 @@ a:hover {
     padding: 5rem;
     background: white;
     margin: 1rem 0;
+    margin-top: 5rem;
     padding: 2rem;
     display: flex;
     box-shadow: 2px 2px 5px #333;
