--- a/Portfolio/Gallery/style.css
+++ b/Portfolio/Gallery/style.css
@@ -61,6 +61,10 @@ nav {
     z-index: 3;
 }
 
+.name-nav>img {
+    cursor: pointer;
+}
+
 .mobileMenu {
     display: none;
 }
@@ -73,7 +77,7 @@ ul {
 }
 
 a {
-    margin: 1rem 1rem;
+    margin: 1vh 1vw;
     text-decoration: none;
     color: var(--neutral-col2);
     font-weight: lighter;
@@ -93,6 +97,16 @@ button {
     border: none;
     width: 8rem;
     font-size: 1.2rem;
+    cursor: pointer;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    transition: all 0.3s;
+    position: relative;
+}
+
+.topAnimation:active {
+    background: #278c9c;
+    top: 2px;
 }
 
 .mobileMenu {
@@ -134,7 +148,7 @@ button {
         "content5 content8 content8 content8 content4 content4"
         "content6 content8 content8 content8 content9 content9"
         "content7 content8 content8 content8 content9 content9"
-        "footer footer footer footer footer footer"
+
     ;
     grid-gap: 0.2rem;
     text-align: center;
@@ -145,7 +159,7 @@ button {
     grid-area: content1;
     border-radius: var(--main-radius);
     padding-top: var(--main-padding);
-    background: url(/gallery-pics/GSFC_20171208_Archive_e000383~medium.jpg);
+    background: url(/Gallery/gallery-pics/GSFC_20171208_Archive_e000383~medium.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -157,7 +171,7 @@ button {
     padding-top: var(--main-padding);
     object-fit: cover;
     max-height: none;
-    background: url(/gallery-pics/PIA21390~orig_long.jpg);
+    background: url(/Gallery/gallery-pics/PIA21390~orig_long.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -167,7 +181,7 @@ button {
     grid-area: content3;
     border-radius: var(--main-radius);
     padding-top: var(--main-padding);
-    background: url(/gallery-pics/PIA00342~medium_long.jpg);
+    background: url(/Gallery/gallery-pics/PIA00342~medium_long.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -177,7 +191,7 @@ button {
     grid-area: content4;
     border-radius: var(--main-radius);
     padding-top: var(--main-padding);
-    background: url(/gallery-pics/PIA21073~medium-long.jpg);
+    background: url(/Gallery/gallery-pics/PIA21073~medium-long.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -187,7 +201,7 @@ button {
     grid-area: content5;
     border-radius: var(--main-radius);
     padding-top: var(--main-padding);
-    background: url(/gallery-pics/PIA18033~medium.jpg);
+    background: url(/Gallery/gallery-pics/PIA18033~medium.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -197,7 +211,7 @@ button {
     grid-area: content6;
     border-radius: var(--main-radius);
     padding-top: var(--main-padding);
-    background: url(/gallery-pics/PIA26077~medium.jpg);
+    background: url(/Gallery/gallery-pics/PIA26077~medium.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -207,7 +221,7 @@ button {
     grid-area: content7;
     border-radius: var(--main-radius);
     padding-top: var(--main-padding);
-    background: url(/gallery-pics/GRC-2024-C-02645~medium.jpg);
+    background: url(/Gallery/gallery-pics/GRC-2024-C-02645~medium.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -217,7 +231,7 @@ button {
     grid-area: content8;
     border-radius: var(--main-radius);
     padding-top: var(--main-padding);
-    background: url(/gallery-pics/hubble-observes-one-of-a-kind-star-nicknamed-nasty_17754652960_o~medium.jpg);
+    background: url(/Gallery/gallery-pics/hubble-observes-one-of-a-kind-star-nicknamed-nasty_17754652960_o~medium.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -227,7 +241,7 @@ button {
     grid-area: content9;
     border-radius: var(--main-radius);
     padding-top: var(--main-padding);
-    background: url(/gallery-pics/PIA04921~medium.jpg);
+    background: url(/Gallery/gallery-pics/PIA04921~medium.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -235,7 +249,8 @@ button {
 footer {
     display: flex;
     flex-wrap: wrap;
-    margin: 3rem 12rem;
+    margin: 0 18vw;
+    margin-bottom: 7vh;
     text-align: center;
     border-radius: 5px;
     box-shadow: 0 0 10px var(--shadow-col);
@@ -348,11 +363,7 @@ div {
     scroll-margin-top: 150px;
 }
 
-@media (max-width: 820px) {
-
-    .name-nav {
-        flex-wrap: wrap;
-    }
+@media (max-width: 940px) {
 
     .mobileMenu {
         display: block;
@@ -362,20 +373,43 @@ div {
         display: none;
     }
 
+    .name-nav {
+        flex-wrap: wrap;
+    }
+
     nav ul.responsive {
         display: block;
         background-color: var(--primary-col1);
         color: var(--neutral-col2);
         position: absolute;
-        left: 52%;
+        left: 65%;
         top: 21%;
         width: fit-content;
-        padding: 1rem;
+        padding: 1vw;
     }
 
     ul.responsive li {
         display: block;
-        margin: 2rem;
+        margin: 4vw;
+    }
+}
+
+
+@media (max-width: 820px) {
+    nav ul.responsive {
+        display: block;
+        background-color: var(--primary-col1);
+        color: var(--neutral-col2);
+        position: absolute;
+        left: 60%;
+        top: 21%;
+        width: fit-content;
+        padding: 1vw;
+    }
+
+    ul.responsive li {
+        display: block;
+        margin: 4vw;
     }
 
     footer {
@@ -428,18 +462,72 @@ div {
     }
 
     nav ul.responsive {
-        position: inherit;
-        display: flex;
-        flex-direction: column;
-    }
-
-    nav {
-        position: inherit;
+        position: absolute;
+        left: 45%;
+        top: 22.5%;
+        width: fit-content;
+        padding: 1vw;
     }
 
     .mobileMenu {
         position: sticky;
     }
+
+    .name-nav img {
+        max-width: 40vw;
+        height: auto;
+    }
+
+    .gallH2:hover h2::after {
+        width: 40%;
+    }
+
+    .gallery {
+        display: grid;
+        width: 100%;
+        min-height: 200vh;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 2fr 2fr 2fr 2fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+        grid-template-areas:
+            "content1 content1"
+            "content1 content1"
+            "content1 content1"
+            "content1 content1"
+            "content1 content1"
+            "content1 content1"
+            "content2 content3"
+            "content2 content3"
+            "content2 content3"
+            "content2 content3"
+            "content4 content4"
+            "content4 content4"
+            "content4 content4"
+            "content4 content4"
+            "content4 content4"
+            "content4 content4"
+            "content5 content6"
+            "content5 content6"
+            "content5 content6"
+            "content5 content6"
+            "content5 content6"
+            "content7 content7"
+            "content7 content7"
+            "content7 content7"
+            "content8 content8"
+            "content8 content8"
+            "content8 content8"
+            "content8 content8"
+            "content8 content8"
+            "content9 content9"
+            "content9 content9"
+            "content9 content9"
+            "content9 content9"
+            "content9 content9"
+        ;
+        grid-gap: 0.2rem;
+        text-align: center;
+    }
+
 
     footer {
         align-items: center;
@@ -448,6 +536,7 @@ div {
         display: flex;
         flex-wrap: wrap;
         margin: 0;
+        margin-top: 3rem;
     }
 
     .contactForm h1 {
